--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_9
+        targetCompatibility JavaVersion.VERSION_1_9
     }
     buildFeatures {
         viewBinding true
@@ -40,6 +40,13 @@ dependencies {
     implementation 'io.ak1:bubbletabbar:1.0.8'
     implementation 'org.jetbrains.kotlin:kotlin-symbol-processing-api:1.4.0-rc-dev-experimental-20200828'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.github.javiersantos:AppUpdater:2.7'
-//    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.2.7'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+
+    implementation 'com.github.jenly1314.AppUpdater:app-updater:1.0.10-androidx'
+    implementation 'com.github.jenly1314.AppUpdater:app-dialog:1.1.4'
 }
