--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,18 @@ android {
         minSdk 29
         targetSdk 33
         versionCode 2
-        versionName "2.0"
+        versionName "SmartHomeApp"
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            android.applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "${variant.versionName}.apk"
+                }
+            }
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,20 +37,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
     implementation 'io.ak1:bubbletabbar:1.0.8'
-    implementation 'org.jetbrains.kotlin:kotlin-symbol-processing-api:1.4.0-rc-dev-experimental-20200828'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.8'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
 
     implementation 'com.github.jenly1314.AppUpdater:app-updater:1.1.4'
     implementation 'com.github.jenly1314.AppUpdater:app-dialog:1.1.4'
