--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:icon="@mipmap/home"
         android:label="@string/app_name"
-        android:enableOnBackInvokedCallback="true"
+        android:testOnly="false"
         android:theme="@style/Theme.Material3.Light.NoActionBar">
         <activity
             android:name=".MainActivity"
