--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.oleg.smarthomedashboard"
         minSdk 29
         targetSdk 33
-        versionCode 4
-        versionName "1.4"
+        versionCode 5
+        versionName "1.5"
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
     }
 
@@ -46,7 +46,5 @@ dependencies {
 
     implementation 'com.github.jenly1314.AppUpdater:app-updater:1.1.4'
     implementation 'com.github.jenly1314.AppUpdater:app-dialog:1.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'/*
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'*/
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
