--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.oleg.smarthomedashboard"
         minSdk 29
         targetSdk 33
-        versionCode 8
-        versionName "1.8"
+        versionCode 12
+        versionName "1.8.4"
         ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
     }
 
@@ -32,6 +32,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.oleg.smarthomedashboard'
 }
 
 dependencies {
